# os_2407

./: .gitmodules  README.md
api/: .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
api/.github/workflows/: ci.yml  push_to_acr.yml
api/src/eventpix_api/: lib.py  main.py
mobile/: .gitignore  README.md  converted_event.json  pubspec.yaml  sample_event.json
mobile/android/app/: build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/com/example/eventpix_mobile/: MainActivity.kt
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: google_calendar_api.dart  main.dart  utils.dart
mobile/lib/pages/: page_result.dart  page_top.dart
mobile/linux/: CMakeLists.txt  my_application.cc
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
mobile/macos/Runner/Configs/: AppInfo.xcconfig
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
mobile/windows/runner/: Runner.rc  main.cpp
